--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
     
     <script type="module" src="/src/main.tsx"></script>
-    <script src="./env-config.js"></script>
+    <script src="/env-config.js"></script>
   </body>
 </html>
